src/objects/BRAC_PA__c.object
<CustomObject>
    <description>A programme assistant for BRAC</description>
    <fields>
        <fullName>Area__c</fullName>
        <description>The area that the PA works in</description>
        <inlineHelpText>Please select the area that the PA is to work in</inlineHelpText>
        <label>Area</label>
        <picklist>
            <controllingField>Region__c</controllingField>
            <picklistValues>
                <fullName>Arua</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kampala East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mbale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mbarara</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kabwohe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soroti</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Location__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The branch for the PA</description>
        <label>Client Location</label>
        <referenceTo>Client_Location__c</referenceTo>
        <relationshipLabel>BRAC PAs</relationshipLabel>
        <relationshipName>BRAC_PAs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>Person__r.First_Name__c  &amp; &quot;, &quot; &amp;  Person__r.Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person__c</fullName>
        <description>The person object for this PA</description>
        <label>Person</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipLabel>BRAC PAs</relationshipLabel>
        <relationshipName>BRAC_PAs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>The region that the PA works in</description>
        <inlineHelpText>Please select the region for this PA</inlineHelpText>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eastern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Western</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>BRAC PA</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BPA{0000000000}</displayFormat>
        <label>BRAC PA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BRAC PAs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>